--- a/requirements.txt
+++ b/requirements.txt
@@ -1,139 +1,8 @@
-# Editable install with no version control (agent-service==0.1.0)
--e /Users/rushiilbhatnagar/techolution-agentspace/adk-agents/salesforce-agent
-amqp==5.3.1
-annotated-types==0.7.0
-anyio==4.9.0
-# Editable install with no version control (apigee_agent==0.1.0)
--e /Users/rushiilbhatnagar/techolution-agentspace/apigee_adk
-astroid==3.3.10
-attrs==25.3.0
-Authlib==1.6.0
-billiard==4.2.1
-black==24.10.0
-cachetools==5.5.2
-celery==5.5.3
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-cloudpickle==3.1.1
-coverage==7.9.1
-cryptography==45.0.4
-Deprecated==1.2.18
-dill==0.4.0
-docker==7.1.0
-docstring_parser==0.16
-fastapi==0.115.13
-flake8==7.3.0
-Flake8-pyproject==1.2.3
-google-adk @ git+https://github.com/rushiiltecho/adk-python.git@c7a69022791e71e0cd19ce34ff0a35d4cc9173e9
-google-api-core==2.25.1
-google-api-python-client==2.173.0
-google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-cloud-aiplatform==1.98.0
-google-cloud-bigquery==3.34.0
-google-cloud-core==2.4.3
-google-cloud-resource-manager==1.14.2
-google-cloud-secret-manager==2.24.0
-google-cloud-speech==2.33.0
-google-cloud-storage==2.19.0
-google-cloud-trace==1.16.2
-google-crc32c==1.7.1
-google-genai==1.21.1
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-graphviz==0.21
-grpc-google-iam-v1==0.14.2
-grpcio==1.73.0
-grpcio-status==1.73.0
-h11==0.16.0
-httpcore==1.0.9
-httplib2==0.22.0
-httpx==0.28.1
-httpx-sse==0.4.0
-idna==3.10
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-isort==6.0.1
-Jinja2==3.1.6
-joblib==1.5.1
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-kombu==5.5.4
-MarkupSafe==3.0.2
-mccabe==0.7.0
-mcp==1.9.4
-mypy_extensions==1.1.0
-numpy==2.3.1
-opentelemetry-api==1.34.1
-opentelemetry-exporter-gcp-trace==1.9.0
-opentelemetry-resourcedetector-gcp==1.9.0a0
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-packaging==25.0
-pandas==2.3.0
-pathspec==0.12.1
-platformdirs==4.3.8
-pluggy==1.6.0
-prompt_toolkit==3.0.51
-proto-plus==1.26.1
-protobuf==6.31.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycodestyle==2.14.0
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.0
-pydantic_core==2.33.2
-pyflakes==3.4.0
-Pygments==2.19.2
-pyink==24.10.1
-pylint==3.3.7
-pyparsing==3.2.3
-pytest==8.4.1
-pytest-asyncio==0.25.3
-pytest-cov==6.2.1
-pytest-mock==3.14.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-redis==6.2.0
-referencing==0.36.2
-requests==2.32.4
-rpds-py==0.25.1
-rsa==4.9.1
-ruamel.yaml==0.18.14
-ruamel.yaml.clib==0.2.12
-scikit-learn==1.7.0
-scipy==1.16.0
-shapely==2.1.1
-six==1.17.0
-# Editable install with no version control (slack_agent-service==0.1.0)
--e /Users/rushiilbhatnagar/techolution-agentspace/adk-agents/slack-agent
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-sse-starlette==2.3.6
-starlette==0.46.2
-tabulate==0.9.0
-tenacity==8.5.0
-threadpoolctl==3.6.0
-tomlkit==0.13.3
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2025.2
-tzlocal==5.3.1
-uritemplate==4.2.0
-urllib3==2.5.0
-uvicorn==0.34.3
-vine==5.1.0
-wcwidth==0.2.13
-websockets==15.0.1
-wrapt==1.17.2
-zipp==3.23.0
+google-adk>=0.1.0
+jinja2>=3.1.0
+pyyaml>=6.0
+requests>=2.28.0
+python-dotenv>=1.0.0
+click>=8.0.0
+rich>=13.0.0
+typer>=0.9.0
